metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormSubmission__c/Calendly__CalendlyRoutingFormSubmission__c.object-meta.xml
<CustomObject>
    <label>CalendlyRoutingFormSubmission</label>
    <nameField>
        <label>CalendlyRoutingFormSubmission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalendlyRoutingFormSubmissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>