metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormSubmission__c/fields/Calendly__Contact__c.field-meta.xml
<CustomField>
    <fullName>Calendly__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CalendlyRoutingFormSubmissions</relationshipLabel>
    <relationshipName>CalendlyRoutingFormSubmissions</relationshipName>
    <type>Lookup</type>
</CustomField>