metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormSubmission__c/fields/Calendly__Email__c.field-meta.xml
<CustomField>
    <fullName>Calendly__Email__c</fullName>
    <externalId>true</externalId>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>