metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormSubmission__c/fields/Calendly__FormName__c.field-meta.xml
<CustomField>
    <fullName>Calendly__FormName__c</fullName>
    <label>FormName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>