metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormSubmission__c/fields/Calendly__FormSubmissionUUID__c.field-meta.xml
<CustomField>
    <fullName>Calendly__FormSubmissionUUID__c</fullName>
    <externalId>true</externalId>
    <label>FormSubmissionUUID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>