metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormSubmission__c/fields/Calendly__FormSubmittedAt__c.field-meta.xml
<CustomField>
    <fullName>Calendly__FormSubmittedAt__c</fullName>
    <label>FormSubmittedAt</label>
    <type>DateTime</type>
</CustomField>