metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormSubmission__c/fields/Calendly__Lead__c.field-meta.xml
<CustomField>
    <fullName>Calendly__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>CalendlyRoutingFormSubmissions</relationshipLabel>
    <relationshipName>CalendlyRoutingFormSubmissions</relationshipName>
    <type>Lookup</type>
</CustomField>