metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormSubmission__c/fields/Calendly__ResultType__c.field-meta.xml
<CustomField>
    <fullName>Calendly__ResultType__c</fullName>
    <label>ResultType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>