metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormSubmission__c/fields/Calendly__ResultValue__c.field-meta.xml
<CustomField>
    <fullName>Calendly__ResultValue__c</fullName>
    <label>ResultValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>