metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormSubmission__c/fields/Calendly__SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>Calendly__SalesforceId__c</fullName>
    <label>SalesforceId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>