metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormSubmission__c/listViews/Calendly__All.listView-meta.xml
<ListView>
    <fullName>Calendly__All</fullName>
    <columns>NAME</columns>
    <columns>Calendly__Email__c</columns>
    <columns>Calendly__FormName__c</columns>
    <columns>Calendly__FormSubmittedAt__c</columns>
    <columns>Calendly__ResultType__c</columns>
    <columns>Calendly__ResultValue__c</columns>
    <columns>Calendly__Contact__c</columns>
    <columns>Calendly__Lead__c</columns>
    <columns>Calendly__SalesforceId__c</columns>
    <columns>Calendly__UtmCampaign__c</columns>
    <columns>Calendly__UtmContent__c</columns>
    <columns>Calendly__UtmMedium__c</columns>
    <columns>Calendly__UtmSource__c</columns>
    <columns>Calendly__UtmTerm__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>